Harden updater threading and Android compatibility